Very mature software deserves very mature package layout.

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-envlist = py36, style
+envlist = py36, py37, style
 skipsdist = True
 
 [testenv]
 changedir = {envtmpdir}
+setenv =
 commands =
     {envbindir}/pip install {toxinidir}
     {envbindir}/trial {posargs:{toxinidir}/tests.py}
@@ -11,9 +12,18 @@ commands =
 deps =
     twisted
 
+[testenv:codecov]
+passenv = CODECOV* CI TRAVIS TRAVIS_*
+setenv =
+    {[testenv]setenv}
+    COVERAGE_DEBUG_FILE={envtmpdir}/coverage-debug
+    COVERAGE_FILE={envtmpdir}/coverage-data
+commands =
+    {envbindir}/pip install {toxinidir}
+    {envbindir}/coverage run --rcfile={toxinidir}/.coveragerc {envbindir}/trial {toxinidir}/tests.py
+    {envbindir}/coverage xml -o {envtmpdir}/coverage.xml
+    {envbindir}/codecov --required --disable gcov --file {envtmpdir}/coverage.xml
+
 [testenv:style]
 deps = ebb-lint
 commands = flake8 {posargs} --max-complexity 10 {toxinidir}/tests.py
-
-[flake8]
-exclude = composition/__init__.py
