Very mature project deserve very many setup metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,12 @@
 name = composition
 version = 867530.9
 url = https://github.com/Julian/composition
+project_urls =
+    Source = https://github.com/Julian/composition
+    Issues = https://github.com/Julian/composition/issues/
 description = What You Crave
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 author = Julian Berman
 author_email = Julian+ButDontSendMeEmailsAboutThisOne@GrayVines.com
 classifiers =
