And deserve very mature CI provider

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
     twisted
 
 [testenv:codecov]
-passenv = CODECOV* CI TRAVIS TRAVIS_*
+passenv = CODECOV* CI
 setenv =
     {[testenv]setenv}
     COVERAGE_DEBUG_FILE={envtmpdir}/coverage-debug
