--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,68 @@
 [tox]
-envlist = py36, py37, style
+envlist =
+    py36
+    py37
+    py38
+    build
+    readme
+    safety
+    secrets
+    style
 skipsdist = True
 
 [testenv]
-changedir = {envtmpdir}
 setenv =
+changedir = {envtmpdir}
 commands =
-    {envbindir}/pip install {toxinidir}
-    {envbindir}/trial {posargs:{toxinidir}/tests.py}
+    {envpython} -m pip install {toxinidir}
+    {envpython} -m twisted.trial {posargs:{toxinidir}/tests.py}
     {envpython} -m doctest {toxinidir}/README.rst
 deps =
     twisted
+    codecov,coverage: coverage
+    codecov: codecov
+
+[testenv:coverage]
+setenv =
+    {[testenv]setenv}
+    COVERAGE_FILE={envtmpdir}/coverage-data
+commands =
+    {envpython} -m pip install {toxinidir}
+    {envpython} -m coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial {toxinidir}/tests.py
+    {envpython} -m coverage report --rcfile={toxinidir}/.coveragerc --show-missing
+    {envpython} -m coverage html --directory={envtmpdir}/htmlcov --rcfile={toxinidir}/.coveragerc {posargs}
+
+[testenv:build]
+deps = pep517
+commands =
+    {envpython} -m pep517.check {toxinidir}
+
+[testenv:bandit]
+deps = bandit
+commands = {envpython} -m bandit --recursive {toxinidir}/tests.py
+
+[testenv:readme]
+deps =
+    pep517
+    twine
+commands =
+    {envpython} -m pep517.build --out-dir {envtmpdir}/dist {toxinidir}
+    {envpython} -m twine check {envtmpdir}/dist/*
+
+[testenv:safety]
+deps = safety
+commands =
+    {envpython} -m pip install {toxinidir}
+    {envpython} -m safety check
+
+[testenv:secrets]
+deps = detect-secrets
+commands = {envbindir}/detect-secrets scan {toxinidir}
+
+[testenv:style]
+deps = flake8
+commands =
+    {envpython} -m flake8 {posargs} --max-complexity 10 {toxinidir}/composition.py {toxinidir}/tests.py
 
 [testenv:codecov]
 passenv = CODECOV* CI
@@ -19,11 +71,7 @@ setenv =
     COVERAGE_DEBUG_FILE={envtmpdir}/coverage-debug
     COVERAGE_FILE={envtmpdir}/coverage-data
 commands =
-    {envbindir}/pip install {toxinidir}
-    {envbindir}/coverage run --rcfile={toxinidir}/.coveragerc {envbindir}/trial {toxinidir}/tests.py
-    {envbindir}/coverage xml -o {envtmpdir}/coverage.xml
-    {envbindir}/codecov --required --disable gcov --file {envtmpdir}/coverage.xml
-
-[testenv:style]
-deps = ebb-lint
-commands = flake8 {posargs} --max-complexity 10 {toxinidir}/tests.py
+    {envpython} -m pip install {toxinidir}
+    {envpython} -m coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial {toxinidir}/tests.py
+    {envpython} -m coverage xml -o {envtmpdir}/coverage.xml
+    {envpython} -m codecov --required --disable gcov --file {envtmpdir}/coverage.xml
