And deserve new version number

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = composition
-version = 867530.9
+version = 8675309
 url = https://github.com/Julian/composition
 project_urls =
     Source = https://github.com/Julian/composition
