--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: python -m pip install pep517
     - name: Evade 'pypa/pep517#74'
-      run: python -m pip install -U setuptools setuptools-scm pip wheel
+      run: python -m pip install -U setuptools pip wheel
       if: startsWith(matrix.python-version, 'pypy')
     - name: Create packages
       run: python -m pep517.build .
@@ -31,7 +31,7 @@ jobs:
         name: dist-${{ matrix.python-version }}
         path: dist
     - name: Publish package
-      if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') && matrix.python-version == 'pypy3' && runner.os == 'Linux'
+      if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') && matrix.python-version == '3.8' && runner.os == 'Linux'
       uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
