A new epoch in programming.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = composition
-version = 8675309
+version = 8!6.75309
 url = https://github.com/Julian/composition
 project_urls =
     Source = https://github.com/Julian/composition
